refactor: turn 반환 메서드 분리
- rowMapper 중복 제거